<resources>
    <string name="app_name">冰箱贴</string>
    <string name="info_second">s</string>
    <string name="title_back">返&#160;&#160;回</string>
    <string name="title_forget_psd">忘记密码</string>

    <string name="hint_user_name">请输入你的手机号</string>
    <string name="hint_psd">请输入你的密码</string>
    <string name="hint_register_phone">请输入手机号</string>
    <string name="hint_register_psd">请设置密码（6-20位，数字与字母组合）</string>
    <string name="hint_reset_psd">请重新设置密码（6-20位，数字与字母组合）</string>
    <string name="hint_confirm_psd">确认密码</string>
    <string name="hint_register_code">请输入验证码</string>
    <string name="label_get_code">获取验证码</string>
    <string name="label_login">登&#160;&#160;录</string>
    <string name="label_register">注&#160;&#160;册</string>
    <string name="label_forgot_psd">忘记密码</string>
    <string name="label_to_register"><u>手机号注册</u></string>
    <string name="label_other_login_way">第三方账号登录</string>
    <string name="label_welcome">欢迎开启你的冰箱</string>
    <string name="label_confirm">确&#160;&#160;认</string>

    <string name="toast_phone_wrong">手机号格式错误</string>
    <string name="toast_no_psd">请输入密码</string>

    <string name="personal_info">个人资料</string>

    <string name="create_refrigerator">创建</string>
    <string name="join_refrigerator">加入</string>
    <string name="input_invite_code">输入邀请码</string>
    <string name="confirm">验证</string>
    <string name="invite_tip">*你可以从家人处获得邀请码哦</string>
    <string name="hint_input_invite_code">输入邀请码加入冰箱</string>
    <string name="hint_create_refrigerator">您还未添加过冰箱，请选择创建或加入冰箱吧</string>
    <string name="hint_invite">邀请家人一起来管理冰箱吧~</string>
    <string name="info_invite">邀请家人加入%s，一起记录、管理冰箱里的食物吧!</string>
    <string name="info_invite_tip">若对方手机里已经有该APP，也可直接点击冰箱管理右上角“输入邀请码”，输入以下邀请码：</string>
    <string name="hint_to_invite">去邀请</string>

    <string name="empty_food_guide">这里空荡荡的，点击 + 丰富你的冰箱吧</string>

    <string name="my_refrigerator">冰箱管理</string>

    <string name="add_food">添加食物</string>

    <string name="info_no_empty">输入内容不能为空</string>
    <string name="info_no_more_than_twenty">请不要超过20个字符</string>


    <string name="cities1">[{
        "Name": "上海",
        "Grade": "3",
        "IsMunicipality": "1"
      },
      {
        "Name": "北京",
        "Grade": "3",
        "IsMunicipality": "1"
      },
      {
        "Name": "天津",
        "Grade": "3",
        "IsMunicipality": "1"
      },
      {
        "Name": "浙江省",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "江苏省",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "广东省",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "湖北省",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "安徽省",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "福建省",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "甘肃省",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "广西",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "贵州",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "海南",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "河北",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "河南",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "黑龙江",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "湖南",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "吉林",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "江西",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "辽宁",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "内蒙古",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "宁夏",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "青海",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "山东",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "山西",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "陕西",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "上海(郊区)",
        "Grade": "3",
        "IsMunicipality": "1"
      },
      {
        "Name": "四川",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "西藏",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "新疆",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "云南",
        "Grade": "3",
        "IsMunicipality": "0"
      },
      {
        "Name": "重庆",
        "Grade": "3",
        "IsMunicipality": "1"
      }]</string>
    <string name="cities2">[{
        "Name": "慈溪市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "奉化市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "海宁市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "杭州市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "湖州市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "嘉兴市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "金华市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "丽水市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "宁波市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "衢州市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "上虞市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "绍兴市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "嵊州市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "台州市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "桐乡市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "温州市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "义乌市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "余姚市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "舟山市",
        "Grade": "4",
        "IsMunicipality": "0"
      },
      {
        "Name": "诸暨市",
        "Grade": "4",
        "IsMunicipality": "0"
      }]</string>
    <string name="cities3">[{
        "Name": "滨江区",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "淳安县",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "富阳市",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "拱墅区",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "建德市",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "江干区",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "临安市",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "上城区",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "桐庐县",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "西湖区",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "下城区",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "萧山区",
        "Grade": "5",
        "IsMunicipality": "0"
      },
      {
        "Name": "余杭区",
        "Grade": "5",
        "IsMunicipality": "0"
      }]</string>
</resources>
